--- a/LineMessage/appsettings.Development.json
+++ b/LineMessage/appsettings.Development.json
@@ -3,6 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "MongoDBSettings": {
+      "ConnectionString": "mongodb+srv://techdice99:iJE80jPswzhVp6WD@rolldice.upfj8j1.mongodb.net/?retryWrites=true&w=majority",
+      "DatabaseName": "RollDice"
     }
   }
 }
