--- a/LineMessage/appsettings.json
+++ b/LineMessage/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb+srv://root:vhhnnVcd5ljGqgQo@cluster0.rzez5eb.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "RollDice"
+  }
 }
